--- a/notebooks/model_exploration.ipynb
+++ b/notebooks/model_exploration.ipynb
@@ -161,15 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
      ]
     },
     {
@@ -177,53 +176,62 @@
      "output_type": "stream",
      "text": [
       "----------Poem 1----------\n",
-      ", that I had someone, my thoughts, for each\n",
-      "One, I've gone alone, I'm not alone at home in this garden?\n",
-      "Where I'm like, I've gone to the door. I'm not alone.\n",
-      "That was my face I've gone through the walls\n",
-      " I will tell you, my dream and my tears;\n",
-      " you're a child I am alone\n",
-      ", I know you are alone I have a life, I have been\n",
-      "; I'm going\n",
+      "The sun burns bright in the west\n",
+      "The blue and white moon shines bright\n",
+      "In the evening breeze of June\n",
+      "Flowers are in the garden\n",
+      "The birds are all singing\n",
+      "In the sun set the sky lights up\n",
+      "In the night\n",
+      "The moon shines bright in the east\n",
+      "The blue and white moon shines bright\n",
+      "In the evening breeze of June\n",
+      "The birds are in the garden\n",
+      "The sun burns bright in the west\n",
+      "The blue and white moon shines bright\n",
+      "In the evening breeze\n",
       "\n",
       "----------Poem 2----------\n",
-      "\n",
-      "\n",
-      "Where I don't think I'm alone\n",
-      "\n",
-      "And I'm dying alone\n",
-      "\n",
-      "\n",
-      "\n",
-      "And I'm lonely\n",
-      " I think of\n",
-      "\n",
-      "We've given him my life\n",
-      "\n",
-      "I am not who's too much\n",
-      "And I am not alone\n",
-      " I am here\n",
-      " I love and you never leave me alone.\n",
-      "But you're afraid\n",
-      "—I'm not a little you alone\n",
-      " I am not alone.\n",
-      "My little mind\n",
-      "The shadow of my home\n",
-      " I don\n",
+      "As long as I live,\n",
+      "I live on the day of death\n",
+      "Of my future.\n",
+      "If I die\n",
+      "On those nights,\n",
+      "I am in a trance.\n",
+      "That night\n",
+      "I am not happy.\n",
+      "For that night\n",
+      "I am dreaming.\n",
+      "The morning\n",
+      "I am dreaming.\n",
+      "The moon has turned\n",
+      "On itself.\n",
+      "It comes down.\n",
+      "But what's gone?\n",
+      "Who are the gods\n",
+      "Of those night dreams?\n",
+      "I don't know who they\n",
       "\n",
       "----------Poem 3----------\n",
-      " with his own lies.I am with life, but you are aloneAnd you know me, alone alone,\n",
-      "My voice to stop my self\n",
-      "\n",
-      "He was alone, to know not from your walls,\n",
-      "The word of our choiceBut that I'm alone and myself will stop;\n",
-      "With no thought I feel alone.\n",
-      "\n",
-      "When I am alone, with a fear that no man can be alone\n",
-      "\n",
-      "My voice alone and my own\n",
-      "\n",
-      "What life comes not so's\n",
+      "When the river lies still\n",
+      "On the hillsides\n",
+      "Where are the clouds\n",
+      "And birds singing\n",
+      "Of a sea song\n",
+      "And the winds\n",
+      "Gave way and swept away\n",
+      "The sand from your feet\n",
+      "And washed away the sea\n",
+      "But that river didn't sink\n",
+      "The sand wasn't a river\n",
+      "The sand was a river\n",
+      "The sea was flowing\n",
+      "The sand was coming up\n",
+      "The clouds came\n",
+      "The birds cried\n",
+      "All the rivers seemed\n",
+      "Tender\n",
+      "The wind came up\n",
       "\n"
      ]
     }
@@ -231,7 +239,7 @@
    "source": [
     "from image_to_poem.language_model.gpt2 import GPT2Model\n",
     "\n",
-    "model_dir = \"../models/language_models/model_20231123_190606/model/\"\n",
+    "model_dir = \"../models/language_models/model_20231123_225612/model/\"\n",
     "\n",
     "model = GPT2Model(model_dir)\n",
     "\n",
@@ -243,6 +251,61 @@
     "    print(poem)\n",
     "    print()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pretrained_model': '../models/language_models/model_20231123_225612/model/',\n",
+       " 'device': device(type='cuda'),\n",
+       " 'verbose': False,\n",
+       " 'name': 'model_20231128_113131',\n",
+       " 'tokenizer': GPT2Tokenizer(name_or_path='../models/language_models/model_20231123_225612/model/', vocab_size=50257, model_max_length=1024, is_fast=False, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<|startoftext|>', 'eos_token': '<|endoftext|>', 'unk_token': '<|endoftext|>', 'pad_token': '<|pad|>'}, clean_up_tokenization_spaces=True),  added_tokens_decoder={\n",
+       " \t50256: AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True, special=True),\n",
+       " \t50257: AddedToken(\"<|startoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True, special=True),\n",
+       " \t50258: AddedToken(\"<|pad|>\", rstrip=False, lstrip=False, single_word=False, normalized=True, special=True),\n",
+       " },\n",
+       " 'model': GPT2LMHeadModel(\n",
+       "   (transformer): GPT2Model(\n",
+       "     (wte): Embedding(50259, 768)\n",
+       "     (wpe): Embedding(1024, 768)\n",
+       "     (drop): Dropout(p=0.1, inplace=False)\n",
+       "     (h): ModuleList(\n",
+       "       (0-11): 12 x GPT2Block(\n",
+       "         (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "         (attn): GPT2Attention(\n",
+       "           (c_attn): Conv1D()\n",
+       "           (c_proj): Conv1D()\n",
+       "           (attn_dropout): Dropout(p=0.1, inplace=False)\n",
+       "           (resid_dropout): Dropout(p=0.1, inplace=False)\n",
+       "         )\n",
+       "         (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "         (mlp): GPT2MLP(\n",
+       "           (c_fc): Conv1D()\n",
+       "           (c_proj): Conv1D()\n",
+       "           (act): NewGELUActivation()\n",
+       "           (dropout): Dropout(p=0.1, inplace=False)\n",
+       "         )\n",
+       "       )\n",
+       "     )\n",
+       "     (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "   )\n",
+       "   (lm_head): Linear(in_features=768, out_features=50259, bias=False)\n",
+       " )}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.__dict__"
    ]
   },
   {
